src/test/resources/test/coco/valid/StructWithVeryVeryVeryLongName.struct
package test.coco.valid;

struct StructWithVeryVeryVeryLongName {
  B fieldWithVeryLongName;
  Q (-0.1 : 0.001 : 0.1) fieldWithVeryVeryLongName;
  Z (10m : 1m : 100km) fieldWithVeryVeryVeryLongName;
  C fieldWithVeryVeryVeryVeryLongName;
  test.coco.valid.T1[] fieldWithVeryVeryVeryVeryVeryLongName;
  W1[][][][][][][][][][][][][][][][][][][][][][][][] fieldWithVeryVeryVeryVeryVeryVeryLongName;
}
