src/test/resources/test/coco/invalid/uncapitalizedModel.struct
package test.coco.invalid;

struct uncapitalizedModel {
  Z f1;
  Q f2;
  B[][][] f3;
}
